spec/error_shorthand_lambda_type.kex
main do
  let nums = [1, 2, 3]
  let result = nums.map(&.split(" "))
  IO.printLine(result.join(", "))
end
